--- a/Application/yaml/deployment.yaml
+++ b/Application/yaml/deployment.yaml
@@ -20,7 +20,7 @@ spec:
             - containerPort: 8080
               protocol: TCP
           imagePullPolicy: IfNotPresent
-          image: 'quay.io/lotems/my_app:v1'
+          image: 'quay.io/lotem_sier/my_app:v1'
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
   strategy:
