--- a/Application/yaml/route.yaml
+++ b/Application/yaml/route.yaml
@@ -1,11 +1,11 @@
 kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
-  name:  lotem_sier-hello-world
+  name:  user19-hello-world
 spec:
   to:
     kind: Service
-    name:  lotem_sier-hello-world
+    name:  user19-hello-world
     weight: 100
   port:
     targetPort: 8080
