--- a/Application/helm/templates/service.yaml
+++ b/Application/helm/templates/service.yaml
@@ -1,11 +1,11 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: user19-hello-world
+  name: {{ .Chart.Name }}-service
 spec:
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: {{ .Values.service.servicePort }}
+      targetPort: {{ .Values.containers.containerPort }}
   selector:
-    app: user19-hello-world
+    app: {{ .Chart.Name }}
