--- a/Application/helm/templates/route.yaml
+++ b/Application/helm/templates/route.yaml
@@ -1,12 +1,12 @@
 kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
-  name:  user19-hello-world
+  name:  {{ .Chart.Name }}-route
 spec:
   to:
     kind: Service
-    name:  user19-hello-world
+    name:  {{ .Chart.Name }}-service
     weight: 100
   port:
-    targetPort: 8080
+    targetPort: {{ .Values.service.servicePort }}
   wildcardPolicy: None
