--- a/Application/helm/templates/deployment.yaml
+++ b/Application/helm/templates/deployment.yaml
@@ -12,6 +12,11 @@ spec:
       labels:
         app: {{ .Chart.Name }}
     spec:
+      volumes:
+        - name: index-html
+          configMap:
+            name: '{{ .Chart.Name }}-html'
+            defaultMode: 420
       containers:
         - resources: {}
           terminationMessagePath: /dev/termination-log
