--- a/Application/helm/templates/deployment.yaml
+++ b/Application/helm/templates/deployment.yaml
@@ -26,6 +26,9 @@ spec:
               protocol: TCP
           imagePullPolicy: IfNotPresent
           image: {{ .Values.containers.image }}:{{ .Values.containers.tag }}
+          volumeMounts:
+            - name: index-html
+              mountPath: /tmp/html
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
   strategy:
