--- a/Application/helm/templates/deployment.yaml
+++ b/Application/helm/templates/deployment.yaml
@@ -29,6 +29,29 @@ spec:
           volumeMounts:
             - name: index-html
               mountPath: /tmp/html
+          readinessProbe:
+            httpGet:
+              path: /health/readiness
+              port: {{ .Values.containers.containerPort  }}
+              scheme: HTTP
+            initialDelaySeconds: 1
+            timeoutSeconds: 1
+            periodSeconds: 10
+            successThreshold: 1
+            failureThreshold: 3
+          livenessProbe:
+            httpGet:
+              path: /health/liveliness
+              port: {{ .Values.containers.containerPort }}
+              scheme: HTTP
+            initialDelaySeconds: 1
+            timeoutSeconds: 1
+            periodSeconds: 10
+            successThreshold: 1
+            failureThreshold: 3
+          env:
+            - name: PORT
+              value: {{ .Values.containers.containerPort | quote }}
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
   strategy:
