--- a/Application/helm/sub_chart/Chart.yaml
+++ b/Application/helm/sub_chart/Chart.yaml
@@ -3,7 +3,7 @@ name: workshop-test
 description: A Helm chart for Kubernetes
 type: application
 dependencies:
-  - name: <<Name-of-Your-Chart>>
+  - name: user19-hello-world
     repository: oci://ghcr.io/lotemsier/helm/
     version: "1.0.0"
     alias: deploy1
